--- a/configs/prolificdreamer.yaml
+++ b/configs/prolificdreamer.yaml
@@ -54,7 +54,7 @@ system:
   renderer_type: "nerf-volume-renderer"
   renderer:
     radius: ${system.geometry.radius}
-    num_samples_per_ray: 512
+    num_samples_per_ray: 256 #512
 
   prompt_processor_type: "stable-diffusion-prompt-processor"
   prompt_processor:
